--- a/.github/workflows/lana-bank-docs.yml
+++ b/.github/workflows/lana-bank-docs.yml
@@ -44,6 +44,10 @@ jobs:
         run: |
           nix develop -c bash -lc "cd docs-site && npm ci"
 
+      - name: Generate API docs
+        run: |
+          nix develop -c bash -lc "cd docs-site && npm run generate-api-docs"
+
       - name: Validate API descriptions
         run: |
           nix develop -c bash -lc "cd docs-site && npm run validate-api-descriptions"
