--- a/deny.toml
+++ b/deny.toml
@@ -381,6 +381,11 @@ crate = "check-dependency-dag"
 expression = "LicenseRef-BUSL-1.1"
 license-files = []
 
+[[licenses.clarify]]
+crate = "public-events-schema"
+expression = "LicenseRef-BUSL-1.1"
+license-files = []
+
 [licenses.private]
 # If true, ignores workspace crates that aren't published, or are only
 # published to private registries.
