fix: typos check

--- a/typos.toml
+++ b/typos.toml
@@ -6,6 +6,10 @@ extend-exclude = [
 	"**/pnpm-lock.yaml",
 	"/apps/admin-panel/lib/graphql/generated/mocks.ts",
 	"/apps/admin-panel/messages/es.json",
+	"docs-site/i18n/es/**",
+	"docs-site/scripts/*.es.json",
+	"docs-site/scripts/validate-api-descriptions.js",
+	"docs-site/scripts/fix-category-keys.js",
 	"/apps/admin-panel/cypress/manuals/*",
 	"dagster/src/dbt_lana_dw/macros/el-salvador-ssf/*",
 	"dagster/src/dbt_lana_dw/seeds/el-salvador-ssf/*",
