--- a/.envrc
+++ b/.envrc
@@ -2,6 +2,13 @@ dotenv
 
 use flake .
 
+# Override settings for devcontainer (uses internal Docker network)
+if [[ -n "${REMOTE_CONTAINERS:-}" ]] || [[ -n "${CODESPACES:-}" ]] || [[ -f /.dockerenv ]]; then
+  export DATABASE_URL="postgres://user:password@core-pg:5432/pg"
+  export PG_CON="$DATABASE_URL"
+  export LANA_CONFIG="./bats/lana.devcontainer.yml"
+fi
+
 export TF_VAR_name_prefix="${USER}"
 export SA_CREDS_BASE64="${TF_VAR_sa_creds}"
 
