--- a/core/accounting/Cargo.toml
+++ b/core/accounting/Cargo.toml
@@ -16,6 +16,7 @@ core-money = { workspace = true }
 document-storage = { workspace = true }
 job = { workspace = true }
 cloud-storage = { workspace = true }
+obix = { workspace = true }
 
 cala-ledger = { workspace = true }
 es-entity = { workspace = true, features = ["graphql"] }
