--- a/docs-site/package.json
+++ b/docs-site/package.json
@@ -15,9 +15,10 @@
     "generate-api-docs": "docusaurus graphql-to-doc:admin && docusaurus graphql-to-doc:customer && node scripts/fix-category-keys.js",
     "generate-api-docs:admin": "docusaurus graphql-to-doc:admin",
     "generate-api-docs:customer": "docusaurus graphql-to-doc:customer",
+    "generate-versioned-api-docs": "node scripts/generate-versioned-api-docs.js",
     "generate-events-docs": "node scripts/generate-events-docs.js",
     "validate-api-descriptions": "node scripts/validate-api-descriptions.js",
-    "prebuild": "npm run generate-api-docs"
+    "prebuild": "npm run generate-api-docs && npm run generate-versioned-api-docs"
   },
   "dependencies": {
     "@docusaurus/core": "^3.7.0",
