feat(reports): connect runtime to dagster (#3180)
* feat: otel connected traces for file report generation

* feat: add in webhook and boilerplate for sync report

* feat: hit webhook from dagster

* feat: dagster crate and sync report e2e working

* feat: some improv

* fix: check-code

* fix: update-schema

* fix: no magic strings

--- a/dev/lana.default.yml
+++ b/dev/lana.default.yml
@@ -57,7 +57,12 @@ app:
       port: 0
       insecure: false
       admin_panel_url: ''
-  report: {}
+  report:
+    dagster:
+      uri: http://localhost:3000/graphql
+      pipeline_name_for_report_generation: file_reports_generation
+      repository_location_name: Lana DW
+      repository_name: __repository__
   deposit:
     require_verified_customer_for_account: true
 tracing:
