--- a/core/access/Cargo.toml
+++ b/core/access/Cargo.toml
@@ -37,4 +37,9 @@ schemars = { workspace = true, optional = true }
 workspace-hack = { version = "0.1", path = "../../workspace-hack" }
 
 [dev-dependencies]
+async-trait = { workspace = true }
 serde_json = { workspace = true }
+tokio = { workspace = true }
+tokio-stream = { workspace = true }
+uuid = { workspace = true }
+anyhow = { workspace = true }
