--- a/lana/app/Cargo.toml
+++ b/lana/app/Cargo.toml
@@ -17,6 +17,7 @@ rbac-types = { workspace = true }
 lana-events = { workspace = true }
 lana-ids = { workspace = true, features = ["graphql"] }
 contract-creation = { workspace = true }
+rendering = { workspace = true }
 
 dashboard = { workspace = true }
 user-onboarding = { workspace = true }
