--- a/lib/rendering/Cargo.toml
+++ b/lib/rendering/Cargo.toml
@@ -10,10 +10,11 @@ fail-on-warnings = []
 [dependencies]
 handlebars = { workspace = true }
 markdown2pdf = { workspace = true }
+reqwest = { workspace = true }
 serde = { workspace = true }
 thiserror = { workspace = true }
 tokio = { workspace = true }
 tracing = { workspace = true }
 tracing-macros = { workspace = true }
-tracing-utils = { workspace = true }
+tracing-utils = { workspace = true, features = ["http", "reqwest"] }
 workspace-hack = { version = "0.1", path = "../../workspace-hack" }
