--- a/core/domain-config/Cargo.toml
+++ b/core/domain-config/Cargo.toml
@@ -26,6 +26,8 @@ tracing-macros = { workspace = true }
 tracing-utils = { workspace = true }
 rust_decimal = { workspace = true }
 strum = { workspace = true }
+chrono = { workspace = true }
+chrono-tz = { workspace = true }
 async-graphql = { workspace = true, optional = true }
 workspace-hack = { version = "0.1", path = "../../workspace-hack" }
 schemars = { workspace = true, optional = true }
