--- a/core/customer/Cargo.toml
+++ b/core/customer/Cargo.toml
@@ -41,3 +41,12 @@ tracing-utils = { workspace = true }
 async-graphql = { workspace = true, optional = true }
 schemars = { workspace = true, optional = true }
 workspace-hack = { version = "0.1", path = "../../workspace-hack" }
+
+[dev-dependencies]
+authz = { workspace = true, features = ["test-dummy"] }
+document-storage = { workspace = true }
+tokio = { workspace = true }
+tokio-stream = { workspace = true }
+uuid = { workspace = true }
+anyhow = { workspace = true }
+cloud-storage = { workspace = true }
