refactor: use short sleeps in job and move logic to VO

--- a/core/time-events/Cargo.toml
+++ b/core/time-events/Cargo.toml
@@ -22,5 +22,6 @@ tracing-utils = { workspace = true }
 tracing-macros = { workspace = true }
 obix = { workspace = true }
 job = { workspace = true }
+es-entity = { workspace = true }
 
 workspace-hack = { version = "0.1", path = "../../workspace-hack" }
