--- a/ci/release/pipeline.yml
+++ b/ci/release/pipeline.yml
@@ -379,6 +379,7 @@ jobs:
     plan:
       - in_parallel:
           - get: promote-rc-pr
+            trigger: true
           - get: repo
             passed: [ open-promote-rc-pr ]
           - get: pipeline-tasks
@@ -405,7 +406,7 @@ jobs:
               outputs:
                 - name: artifacts
               run:
-                path: pipeline-tasks/ci/vendor/tasks/prep-release-src.sh
+                path: pipeline-tasks/ci/tasks/prep-release-src.sh
           - task: prep-release-apps
             config:
               platform: linux
@@ -504,6 +505,7 @@ jobs:
           tag: artifacts/gh-release-tag
           body: artifacts/gh-release-notes.md
           globs: [binaries/*]
+          commitish: repo/.git/commit
       - task: prepare-docker-build
         config:
           platform: linux
@@ -755,7 +757,7 @@ jobs:
                   git config --global user.name "CI Bot"
                 fi
                 git add CHANGELOG.md
-                git commit -m "chore: release ${VERSION}"
+                git commit -m "chore: release ${VERSION} [ci skip]"
       - put: repo-bot-branch
         params:
           repository: repo
@@ -805,6 +807,7 @@ resources:
       access_token: #@ data.values.github_token
       base_branch: #@ data.values.git_branch
       disable_forks: true
+      disable_ci_skip: true
       states: [ "MERGED" ]
       paths: [ "CHANGELOG.md" ]
       labels: [ "promote-rc" ]
