--- a/core/time-events/Cargo.toml
+++ b/core/time-events/Cargo.toml
@@ -6,6 +6,10 @@ edition = "2024"
 [features]
 
 fail-on-warnings = []
+json-schema = [                                                                                                                                        
+    "dep:schemars",                                                                                                                                    
+    "es-entity/json-schema",                                                                                                                           
+]
 
 [dependencies]
 async-trait = { workspace = true }
@@ -21,5 +25,7 @@ tracing-macros = { workspace = true }
 obix = { workspace = true }
 job = { workspace = true }
 es-entity = { workspace = true }
+strum = { workspace = true }
 
+schemars = { workspace = true, optional = true }
 workspace-hack = { version = "0.1", path = "../../workspace-hack" }
