chore: Upgrade lodash for docusaurus

--- a/docs-site/package.json
+++ b/docs-site/package.json
@@ -52,5 +52,9 @@
   },
   "engines": {
     "node": ">=18.0"
+  },
+  "overrides": {
+    "lodash": ">=4.17.23",
+    "lodash-es": ">=4.17.23"
   }
 }
