--- a/core/access/Cargo.toml
+++ b/core/access/Cargo.toml
@@ -38,8 +38,8 @@ workspace-hack = { version = "0.1", path = "../../workspace-hack" }
 
 [dev-dependencies]
 async-trait = { workspace = true }
+obix = { workspace = true, features = ["test-utils"] }
 serde_json = { workspace = true }
 tokio = { workspace = true }
-tokio-stream = { workspace = true }
 uuid = { workspace = true }
 anyhow = { workspace = true }
