--- a/core/customer/Cargo.toml
+++ b/core/customer/Cargo.toml
@@ -45,8 +45,8 @@ workspace-hack = { version = "0.1", path = "../../workspace-hack" }
 [dev-dependencies]
 authz = { workspace = true, features = ["test-dummy"] }
 document-storage = { workspace = true }
+obix = { workspace = true, features = ["test-utils"] }
 tokio = { workspace = true }
-tokio-stream = { workspace = true }
 uuid = { workspace = true }
 anyhow = { workspace = true }
 cloud-storage = { workspace = true }
