--- a/core/customer/Cargo.toml
+++ b/core/customer/Cargo.toml
@@ -13,17 +13,22 @@ fail-on-warnings = []
 graphql = ["es-entity/graphql", "governance?/graphql", "dep:async-graphql"]
 json-schema = ["dep:schemars", "es-entity/json-schema", "audit/json-schema"]
 governance = ["dep:governance"]
+sumsub-testing = ["sumsub/sumsub-testing"]
 
 [dependencies]
 
 audit = { workspace = true }
 authz = { workspace = true }
 obix = { workspace = true }
+job = { workspace = true }
 governance = { workspace = true, optional = true }
 document-storage = { workspace = true }
 public-id = { workspace = true }
+sumsub = { workspace = true }
 
 es-entity = { workspace = true }
+serde_json = { workspace = true }
+tokio = { workspace = true }
 strum = { workspace = true }
 serde = { workspace = true }
 derive_builder = { workspace = true }
