--- a/bats/lana.yml
+++ b/bats/lana.yml
@@ -10,8 +10,7 @@ app:
     root_folder: ".lana"
   credit:
     customer_active_check_enabled: false
-    collateralization_from_price_job_interval: 31536000 # 1 year
-    pending_collateralization_from_price_job_interval: 31536000 # 1 year
+    price_job_interval: 31536000 # 1 year
   deposit:
     require_verified_customer_for_account: false
   notification:
