--- a/.github/workflows/sqlx-check.yml
+++ b/.github/workflows/sqlx-check.yml
@@ -10,6 +10,22 @@ jobs:
   sqlx-check:
     name: SQLx Prepare Check
     runs-on: ubuntu-latest
+
+    services:
+      postgres:
+        image: postgres:17.5
+        env:
+          POSTGRES_USER: user
+          POSTGRES_PASSWORD: password
+          POSTGRES_DB: pg
+        ports:
+          - 5433:5432
+        options: >-
+          --health-cmd pg_isready
+          --health-interval 10s
+          --health-timeout 5s
+          --health-retries 5
+
     steps:
       - uses: actions/checkout@v4
       - uses: DeterminateSystems/nix-installer-action@v16
@@ -19,22 +35,12 @@ jobs:
           authToken: ${{ secrets.CACHIX_AUTH_TOKEN }}
           skipPush: true
 
-      - name: Start PostgreSQL
-        run: nix develop -c bash -c "podman-compose up -d core-pg"
-
-      - name: Wait for PostgreSQL
-        run: nix develop -c bash -c "wait4x postgresql 'postgres://user:password@127.0.0.1:5433/pg?sslmode=disable' --timeout 120s"
-
       - name: Run migrations
-        run: nix develop -c bash -c "sqlx migrate run --source lana/app/migrations"
+        run: nix develop -c sqlx migrate run --source lana/app/migrations
         env:
           DATABASE_URL: "postgres://user:password@127.0.0.1:5433/pg?sslmode=disable"
 
       - name: Check .sqlx is up to date
-        run: nix develop -c bash -c "cargo sqlx prepare --workspace --check"
+        run: nix develop -c cargo sqlx prepare --workspace --check
         env:
           DATABASE_URL: "postgres://user:password@127.0.0.1:5433/pg?sslmode=disable"
-
-      - name: Stop PostgreSQL
-        if: always()
-        run: nix develop -c bash -c "podman-compose down" || true
