--- a/core/deposit/Cargo.toml
+++ b/core/deposit/Cargo.toml
@@ -56,6 +56,7 @@ workspace-hack = { version = "0.1", path = "../../workspace-hack" }
 [dev-dependencies]
 authz = { workspace = true, features = ["test-dummy"] }
 document-storage = { workspace = true }
+obix = { workspace = true, features = ["test-utils"] }
 
 tokio = { workspace = true }
 anyhow = { workspace = true }
