refactor: custody public events

--- a/core/custody/Cargo.toml
+++ b/core/custody/Cargo.toml
@@ -42,3 +42,8 @@ sha2 = { workspace = true }
 
 async-graphql = { workspace = true, optional = true }
 workspace-hack = { version = "0.1", path = "../../workspace-hack" }
+
+[dev-dependencies]
+obix = { workspace = true, features = ["test-utils"] }
+tokio = { workspace = true }
+anyhow = { workspace = true }
