--- a/core/credit/Cargo.toml
+++ b/core/credit/Cargo.toml
@@ -6,7 +6,7 @@ edition = "2024"
 [features]
 
 fail-on-warnings = []
-graphql = ["dep:async-graphql", "cala-ledger/graphql", "es-entity/graphql"]
+graphql = ["dep:async-graphql", "cala-ledger/graphql", "es-entity/graphql", "core-credit-terms/graphql"]
 json-schema = [
     "dep:schemars",
     "cala-ledger/json-schema",
@@ -15,6 +15,7 @@ json-schema = [
     "job/json-schema",
     "core-price/json-schema",
     "public-id/json-schema",
+    "core-credit-terms/json-schema",
 ]
 mock-custodian = ["core-custody/mock-custodian"]
 
@@ -22,6 +23,7 @@ mock-custodian = ["core-custody/mock-custodian"]
 core-money = { workspace = true }
 core-price = { workspace = true }
 core-customer = { workspace = true }
+core-credit-terms = { path = "terms" }
 core-custody = { workspace = true }
 governance = { workspace = true }
 core-accounting = { workspace = true }
