--- a/core/credit/terms/Cargo.toml
+++ b/core/credit/terms/Cargo.toml
@@ -13,6 +13,8 @@ json-schema = ["dep:schemars", "es-entity/json-schema", "core-money/json-schema"
 core-money = { workspace = true }
 core-price = { workspace = true }
 
+audit = { workspace = true }
+authz = { workspace = true }
 strum = { workspace = true }
 thiserror = { workspace = true }
 derive_builder = { workspace = true }
@@ -22,5 +24,8 @@ chrono = { workspace = true }
 rust_decimal = { workspace = true }
 rust_decimal_macros = { workspace = true }
 sqlx = { workspace = true }
+tracing = { workspace = true }
+tracing-macros = { workspace = true }
+tracing-utils = { workspace = true }
 async-graphql = { workspace = true, optional = true }
 schemars = { workspace = true, optional = true }
