fix: nix flake check and small bugs caught by cursor

--- a/deny.toml
+++ b/deny.toml
@@ -187,6 +187,11 @@ expression = "LicenseRef-BUSL-1.1"
 license-files = []
 
 [[licenses.clarify]]
+crate = "core-credit-terms"
+expression = "LicenseRef-BUSL-1.1"
+license-files = []
+
+[[licenses.clarify]]
 crate = "core-customer"
 expression = "LicenseRef-BUSL-1.1"
 license-files = []
