--- a/core/credit/terms/Cargo.toml
+++ b/core/credit/terms/Cargo.toml
@@ -29,3 +29,4 @@ tracing-macros = { workspace = true }
 tracing-utils = { workspace = true }
 async-graphql = { workspace = true, optional = true }
 schemars = { workspace = true, optional = true }
+workspace-hack = { version = "0.1", path = "../../../workspace-hack" }
