test: report public events

--- a/core/report/Cargo.toml
+++ b/core/report/Cargo.toml
@@ -33,3 +33,8 @@ tracing-macros = { workspace = true }
 tracing-utils = { workspace = true }
 schemars = { workspace = true, optional = true }
 workspace-hack = { version = "0.1", path = "../../workspace-hack" }
+
+[dev-dependencies]
+anyhow = { workspace = true }
+obix = { workspace = true, features = ["test-utils"] }
+tokio = { workspace = true }
