--- a/lana/app/Cargo.toml
+++ b/lana/app/Cargo.toml
@@ -30,6 +30,7 @@ core-money = { workspace = true, features = ["graphql"] }
 core-access = { workspace = true, features = ["graphql"] }
 core-custody = { workspace = true, features = ["graphql"] }
 core-credit = { workspace = true, features = ["graphql"] }
+core-credit-terms = { workspace = true }
 core-customer = { workspace = true, features = ["graphql"] }
 core-price = { workspace = true }
 core-deposit = { workspace = true, features = ["graphql"] }
