--- a/lana/rbac-types/Cargo.toml
+++ b/lana/rbac-types/Cargo.toml
@@ -15,6 +15,7 @@ governance = { workspace = true }
 core-access = { workspace = true }
 core-customer = { workspace = true }
 core-credit = { workspace = true }
+core-credit-terms = { workspace = true }
 core-custody = { workspace = true }
 core-deposit = { workspace = true }
 core-accounting = { workspace = true }
