--- a/typos.toml
+++ b/typos.toml
@@ -1,16 +1,12 @@
 [files]
 extend-exclude = [
 	"CHANGELOG.md",
+	"docs-site/**",
 	"jwks.json",
 	"dev/fake-service-account.json",
 	"**/pnpm-lock.yaml",
 	"/apps/admin-panel/lib/graphql/generated/mocks.ts",
 	"/apps/admin-panel/messages/es.json",
-	"docs-site/i18n/es/**",
-	"docs-site/scripts/*.es.json",
-	"docs-site/scripts/validate-api-descriptions.js",
-	"docs-site/scripts/fix-category-keys.js",
-	"docs-site/docs/architecture/functional-architecture.md",
 	"/apps/admin-panel/cypress/manuals/*",
 	"dagster/src/dbt_lana_dw/macros/el-salvador-ssf/*",
 	"dagster/src/dbt_lana_dw/seeds/el-salvador-ssf/*",
