chore: move domain config test cleanup

--- a/core/credit/Cargo.toml
+++ b/core/credit/Cargo.toml
@@ -61,6 +61,7 @@ workspace-hack = { version = "0.1", path = "../../workspace-hack" }
 [dev-dependencies]
 document-storage = { workspace = true }
 authz = { workspace = true, features = ["test-dummy"] }
+domain-config = { workspace = true, features = ["test-support"] }
 anyhow = { workspace = true }
 rand = { workspace = true }
 serde_yaml = { workspace = true }
