--- a/core/domain-config/Cargo.toml
+++ b/core/domain-config/Cargo.toml
@@ -10,6 +10,7 @@ ignored = ["async-graphql"]
 fail-on-warnings = []
 graphql = ["es-entity/graphql", "dep:async-graphql"]
 json-schema = ["dep:schemars", "es-entity/json-schema"]
+test-support = []
 
 [dependencies]
 audit = { workspace = true }
