feat: add local file serving API for development mode

--- a/bats/lana-normal.yml
+++ b/bats/lana-normal.yml
@@ -8,6 +8,7 @@ app:
   storage:
     provider: local
     root_folder: ".lana"
+    admin_panel_url: "http://admin.localhost:4455"
   notification:
     email:
       admin_panel_url: "http://admin.localhost:4455"
