--- a/Cargo.toml
+++ b/Cargo.toml
@@ -148,6 +148,7 @@ futures = "0.3.29"
 http = "1.4"
 reqwest = { version = "0.12.26", default-features = false, features = ["json", "rustls-tls", "charset", "http2", "macos-system-configuration", "multipart"] }
 url = { version = "2.5", features = ["serde"] }
+urlencoding = "2.1"
 rust_decimal_macros = "1.40.0"
 rust_decimal = "1.40.0"
 rusty-money = { version = "0.4", features = ["iso", "crypto"] }
