--- a/bats/lana.yml
+++ b/bats/lana.yml
@@ -8,6 +8,7 @@ app:
   storage:
     provider: local
     root_folder: ".lana"
+    admin_panel_url: "http://admin.localhost:4455"
   credit:
     price_job_interval: 31536000 # 1 year
   notification:
