--- a/lib/cloud-storage/Cargo.toml
+++ b/lib/cloud-storage/Cargo.toml
@@ -17,6 +17,8 @@ anyhow = { workspace = true }
 tokio = { workspace = true }
 reqwest = { workspace = true }
 async-trait = { workspace = true }
+base64 = { workspace = true }
+urlencoding = { workspace = true }
 workspace-hack = { version = "0.1", path = "../../workspace-hack" }
 
 [dev-dependencies]
