--- a/lana/rbac-types/Cargo.toml
+++ b/lana/rbac-types/Cargo.toml
@@ -9,7 +9,7 @@ fail-on-warnings = []
 
 [dependencies]
 dashboard = { workspace = true }
-contract-creation = { workspace = true }
+pdf-generation = { workspace = true }
 
 governance = { workspace = true }
 core-access = { workspace = true }
