--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,11 +3,16 @@ resolver = "2"
 members = [
   "lana/*",
   "core/*",
+  "core/credit/*",
   "lib/*",
   "dev/entity-rollups",
   "dev/custom-lints",
   "dev/public-events-schema",
   "workspace-hack",
+]
+exclude = [
+  "core/credit/src",
+  "core/credit/tests",
 ]
 
 [workspace.lints.rust]
@@ -38,6 +43,7 @@ tracing-utils = { path = "lib/tracing-utils" }
 core-access = { path = "core/access" }
 core-accounting = { path = "core/accounting" }
 core-credit = { path = "core/credit" }
+core-credit-terms = { path = "core/credit/terms" }
 core-custody = { path = "core/custody" }
 core-customer = { path = "core/customer" }
 core-deposit = { path = "core/deposit" }
