--- a/workspace-hack/Cargo.toml
+++ b/workspace-hack/Cargo.toml
@@ -62,7 +62,7 @@ once_cell = { version = "1", features = ["portable-atomic"] }
 opentelemetry-http = { version = "0.31", features = ["reqwest-rustls-webpki-roots"] }
 opentelemetry-otlp = { version = "0.31", default-features = false, features = ["grpc-tonic", "http-proto", "reqwest-client", "reqwest-rustls-webpki-roots"] }
 pkcs8 = { version = "0.10", default-features = false, features = ["encryption", "pem", "std"] }
-proc-macro2 = { version = "1" }
+proc-macro2 = { version = "1", features = ["span-locations"] }
 prost = { version = "0.13", features = ["prost-derive"] }
 quote = { version = "1" }
 rand = { version = "0.9" }
@@ -144,7 +144,7 @@ once_cell = { version = "1", features = ["portable-atomic"] }
 opentelemetry-http = { version = "0.31", features = ["reqwest-rustls-webpki-roots"] }
 opentelemetry-otlp = { version = "0.31", default-features = false, features = ["grpc-tonic", "http-proto", "reqwest-client", "reqwest-rustls-webpki-roots"] }
 pkcs8 = { version = "0.10", default-features = false, features = ["encryption", "pem", "std"] }
-proc-macro2 = { version = "1" }
+proc-macro2 = { version = "1", features = ["span-locations"] }
 prost = { version = "0.13", features = ["prost-derive"] }
 quote = { version = "1" }
 rand = { version = "0.9" }
